antes de que se dañara el servidor

--- a/templates/situacionesadms/mis_solicitudes.html
+++ b/templates/situacionesadms/mis_solicitudes.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+{% block nombre_pantalla %}
+<h4>Mis Solicitudes</h4>
+{% endblock %}
 {% block contenido %}
-<h3>Mis Solicitudes</h3>
 <br>
 <table class="table table-hover">
     <thead>
