--- a/templates/users/entrar.html
+++ b/templates/users/entrar.html
@@ -9,9 +9,11 @@
             <legend class="border-bottom mb-4">Iniciar sesión</legend>
             {{ form|crispy }}
         </fieldset>
+        
         <div class="form-group">
             <button class="btn btn-dark" type="submit">Entrar</button>
         </div>
+        <em class="text-secondary">* Requerido</em>
     </form>
     </div>
 </div>
