--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Situaciones Administrativas UdeC</title>
+        <meta name="theme-color" content="#FFCC00">
+        <meta name="description" content="Situaciones Administrativas UdeC">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Situaciones Administrativas UdeC</title>
-    <meta name="theme-color" content="#FFCC00">
-    <meta name="description" content="Situaciones Administrativas UdeC">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+        <!-- <link rel="stylesheet" href="{% static 'css/bootstraplitera.min.css' %}" type="text/css"> -->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
+        <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+    </head>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
-    <!-- <link rel="stylesheet" href="{% static 'css/bootstraplitera.min.css' %}" type="text/css"> -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-    <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
-</head>
-
-<body class="">
-
-    {% include 'nav.html' %}
-    <div class="container-fluid fullalto pt-2">
-        <div class="row">
-            <div class="col-lg-1 px-2">
-                {% block leftbar %}
-                {% endblock %}
+    <body class="">
+        {% include 'nav.html' %}
+        <div class="container-fluid fullalto pt-2">
+            <div class="row">
+                <div class="col-lg-1 px-2">
+                    {% block leftbar %}
+                    {% endblock %}
+                </div>
+                <div class="col-lg-10">
+                    <span class="text-secondary">
+                        {% block nombre_pantalla %}
+                        {% endblock %}
+                    </span>
+                    {% block contenido %}
+                    {% endblock %}
+                </div>
+                <div class="col-lg-1 px-2">
+                    {% block rightbar %}
+                    {% endblock %}
+                </div>
             </div>
-            <div class="col-lg-10">
-                {% block contenido %}
-                {% endblock %}
-            </div>
-            <div class="col-lg-1 px-2">
-                {% block rightbar %}
-                {% endblock %}
+            <div>
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert 
+                alert-{% if message.tags == 'error' %}danger
+                {% else %}secondary
+                {% endif %} alert-dismissible fade show m-1">{{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endfor %}
+                {% endif %}
             </div>
         </div>
-        <div>
-            {% if messages %}
-            {% for message in messages %}
-            <div class="alert 
-            alert-{% if message.tags == 'error' %}danger
-            {% else %}secondary
-            {% endif %} alert-dismissible fade show m-1">{{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            {% endfor %}
-            {% endif %}
-        </div>
-    </div>
-    <!-- Footer fixed-bottom-->
-    <footer class="page-footer font-small bg-dark text-light ">
+        <!-- Footer fixed-bottom-->
+        <footer class="page-footer font-small bg-dark text-light ">
 
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">
-            <!--Admin-->
-            {% if user.is_superuser %}
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">
+                <!--Admin-->
+                {% if user.is_superuser %}
                 <a href="/admin/" class="institucional mr-2" target="_blank">Admin</a>
-            {% endif %}
-            © 2019 Copyright:
-            <a href="http://www.unicartagena.edu.co" target="_blank" class="institucional">Unicartagena</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="https://kit.fontawesome.com/24352a4bd1.js"></script>
+                {% endif %}
+                © 2019 Copyright:
+                <a href="http://www.unicartagena.edu.co" target="_blank" class="institucional">Unicartagena</a>
+            </div>
+            <!-- /Copyright -->
+        </footer>
+        <!-- /Footer -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="https://kit.fontawesome.com/24352a4bd1.js"></script>
 
-    <!--inicializar popovers-->
-    <script>
-        $(function () {
-            $('[data-toggle="popover"]').popover()
-        })
-    </script>
-    {% block scripts %}
-    {% endblock %}
-
-</body>
-
+        <!--inicializar popovers-->
+        <script>
+            $(function () {
+                $('[data-toggle="popover"]').popover()
+            })
+        </script>
+        {% block scripts %}
+        {% endblock %}
+    </body>
 </html>
