--- a/templates/situacionesadms/revision_solicitud.html
+++ b/templates/situacionesadms/revision_solicitud.html
@@ -1,44 +1,70 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block nombre_pantalla %}
+  <h4>Revisión Solicitud</h4>
+{% endblock %}
 {% block contenido %}
-<h3>Revisión Solicitud</h2>
-<div class="card">
-  <div class="card-header d-flex justify-content-between">
-    <span>Solicitud No. {{solicitud.id}}</span>
-    <strong class="">{{ solicitud.situacion|title }}</strong>
-    <em class="">{{ solicitud.fecha_creacion|date:"M d, Y" }}</em>
-  </div>
-  <div class="card-body">
-    <div class="row card-title">
-      <div class="col-lg-4">Funcionario: <em>{{ solicitud.empleado.nombre_completo }}</em></div>
-      <div class="col-lg-4">Cargo: <em>{{ solicitud.empleado.cargo }}</em></div>
-      <div class="col-lg-4">Tipo Vinculación: <em>{{ solicitud.empleado.tipo_vinculacion }}</em></div>
+  <div class="card">
+    <div class="card-header d-flex justify-content-between">
+      <span>Solicitud No. {{solicitud.id}}</span>
+      <strong class="">{{ solicitud.situacion|title }}</strong>
+      <em class="">{{ solicitud.fecha_creacion|date:"M d, Y" }}</em>
     </div>
-    <div class="row card-text">
-      <div class="col-3">Demás datos solicitud...</div>
-      <div class="col-12">
-        <a href="{{solicitud.soportes.url}}">Soportes</a>
+    <div class="card-body">
+      <div class="row card-title">
+        <div class="col-lg-3">Funcionario: <em>{{ solicitud.empleado.nombre_completo }}</em></div>
+        <div class="col-lg-3">Cargo: <em>{{ solicitud.empleado.cargo }}</em></div>
+        <div class="col-lg-3">Tipo Vinculación: <em>{{ solicitud.empleado.tipo_vinculacion }}</em></div>
+        <div class="col-lg-3">Sede/Dependencia: <em>{{ solicitud.empleado.sede_dependencia }}</em></div>
+      </div>
+      <div class="row card-text">
+        <div class="col-12">
+          <form>
+            {% csrf_token %}
+            {% include 'situacionesadms/basicform1.html' %}
+            {% include 'situacionesadms/basicform4.html' %}
+            {% include 'situacionesadms/basicform.html' %}
+
+            {% for field in form %}
+            {% if field.id_for_label in "id_dias_permiso id_fecha_i id_fecha_f id_nombre_del_evento id_ciudad id_pais id_asiste_en_calidad id_nombre_encargo id_apellido_encargo id_cargo_encargo id_resolucion_vaciones id_no_dias_a_reservar" %}
+            <!--includes arriba y abajo-->
+            {% else %}
+            <div class="form-group">
+              {{ field.errors }}
+              {{ field.label_tag }} {{ field }}
+              {% if field.help_text %}
+              <!-- <p class="help">{{ field.help_text|safe }}</p> -->
+              {% endif %}
+            </div>
+            {% endif %}
+            {% endfor %}
+            {% include 'situacionesadms/basicform2.html' %}
+            {% include 'situacionesadms/basicform3.html' %}
+          </form>
+        </div>
+
+        <div class="col-12">
+          <a href="{{solicitud.soportes.url}}">Soportes</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<br>
-<div class="row justify-content-center">
-  <div class="col-4 text-center">
-    <a href="{% url 'situacionesadms:rechazar' solicitud.id %}" class="btn btn-dark btn-block" title="Rechazar"><i class="fas fa-times"></i></a>
+  <br>
+  <div class="row justify-content-center">
+    <div class="col-4 text-center">
+      <a href="{% url 'situacionesadms:rechazar' solicitud.id %}" class="btn btn-dark btn-block" title="Rechazar"><i
+          class="fas fa-times"></i></a>
+    </div>
+    {% if user.empleado.tipo_acceso == 2 %}
+    <div class="col-4 text-center">
+      <a href="#" class="btn btn-dark btn-block" title="Estudio de Perfil"><i class="fas fa-users"></i></a>
+    </div>
+    {% endif %}
+    <div class="col-4 text-center">
+      <a href="{% url 'situacionesadms:aceptar' solicitud.id %}" class="btn btn-dark btn-block" title="Aceptar"><i
+          class="fas fa-check"></i></a>
+    </div>
   </div>
-  {% if user.empleado.tipo_acceso == 2 %}
-  <div class="col-4 text-center">
-    <button href="#" class="btn btn-dark btn-block" title="Estudio de Perfil"><i class="fas fa-users"></i></button>
-  </div>
-  {% endif %}
-  <div class="col-4 text-center">
-    <form action="{% url 'situacionesadms:aceptar' %}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="acceso" value="{{user.empleado.tipo_acceso}}">
-      <button class="btn btn-dark btn-block" type="submit" value="" title="Aceptar"><i class="fas fa-check"></i></button>
-    </form>
-  </div>
-</div>
-{% endblock %}
+  <br>
+  {% endblock %}
