--- a/templates/users/inicio.html
+++ b/templates/users/inicio.html
@@ -33,7 +33,7 @@
 </div>
 {% endif %}
 {% else %}
-<p>perfil incompleto, comuniquese con el administrador</p>
+<p>perfil incompleto, comuníquese con el administrador</p>
 {% endif %}
 
 
