--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
         <!-- <link rel="stylesheet" href="{% static 'css/bootstraplitera.min.css' %}" type="text/css"> -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-        <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
     </head>
 
     <body class="">
