--- a/templates/situacionesadms/mis_solicitudes.html
+++ b/templates/situacionesadms/mis_solicitudes.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block contenido %}
 <br>
-<table class="table table-hover">
+<table class="table table-hover table-striped">
     <thead>
         <tr>
             <th scope="col">No.</th>
