--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -2,9 +2,39 @@
 {% load static %}
 
 {% block contenido %}
-<h3>Registro de otras Situaciones Administrativas</h3>
+<h3>Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
 <hr>
-<a href="" class="btn btn-dark">Año Sabático</a>
-<a href="" class="btn btn-dark">Comisión de Estudio Mayor a 6 Meses</a>
-<a href="" class="btn btn-dark disabled" aria-disabled="true">Comisión con Viaticos</a>
+<em>Primero busca al funcionario</em>
+
+<form action="." method="post">
+<input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search">
+<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+</form>
+
+<table class="table table-hover table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Cédula</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Situación</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% if funcionarios %}
+        {% for funcionario in funcionarios %}
+        <tr>
+            <th scope="row">{{ soli.id }}</th>
+            <td>{{ funcionario.situacion }}</td>
+            <td>
+                <a href="" class="btn btn-primary btn-sm">Comisión</a>
+                <a href="" class="btn btn-info btn-sm">Sabático</a>
+            </td>
+    
+        </tr>
+        {% endfor %}
+        {% else %}
+        <em></em>
+        {% endif %}
+    </tbody>
+</table>
 {% endblock %}
