--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,28 +1,34 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        {% if user.is_authenticated %}
-          <a class="navbar-brand institucional" href="{% url 'users:inicio' %}"><i class="fab fa-buffer"></i> Situaciones Administrativas UdeC</a>
-        {% else %}
-          <a class="navbar-brand" href="/">Situaciones Administrativas UdeC</a>
-        {% endif %}
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="navbar-nav ml-auto">
-            {% block items_nav %}
-            {% endblock %}
-            {% if user.is_authenticated %}
-              {% if user.first_name %}
-              <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido <em>{{ user.first_name }} {{ user.last_name }}</em> <span class="text-light ml-2">|</span></a>
-              {% else %}
-              <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido Usuario |</a>
-              {% endif %}
-            <a class="nav-item nav-link" href="{% url 'situacionesadms:mis_solicitudes' %}">mis solicitudes</a>
-            <a class="nav-item nav-link" href="{% url 'users:cerrar' %}">Cerrar sesión</a>
-            {% else %}
-            <a class="nav-item nav-link" href="{% url 'users:entrar' %}">Entrar</a>
-            {% endif %}
-          </div>
-        </div>
-      </nav>
+  {% if user.is_authenticated %}
+  <a class="navbar-brand institucional" href="{% url 'users:inicio' %}"><i class="fab fa-buffer"></i>
+    Situaciones Administrativas UdeC
+  </a>
+  {% else %}
+  <a class="navbar-brand" href="/">
+    Situaciones Administrativas UdeC
+  </a>
+  {% endif %}
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="navbar-nav ml-auto">
+      {% block items_nav %}
+      {% endblock %}
+      {% if user.is_authenticated %}
+      {% if user.first_name %}
+      <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido <em>{{ user.first_name }}
+          {{ user.last_name }}</em> <span class="text-light ml-2">|</span></a>
+      {% else %}
+      <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido Usuario |</a>
+      {% endif %}
+      <a class="nav-item nav-link" href="{% url 'situacionesadms:mis_solicitudes' %}">mis solicitudes</a>
+      <a class="nav-item nav-link" href="{% url 'users:cerrar' %}">Cerrar sesión</a>
+      {% else %}
+      <a class="nav-item nav-link" href="{% url 'users:entrar' %}">Entrar</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
