--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block contenido %}
-<h3>Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
-<hr>
-<em>Primero busca al funcionario</em>
+{% block nombre_pantalla %}
+<h3 class="d-sm-none d-md-block">Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
+{% endblock %}
 
-<form action="." method="post">
-<input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search">
+{% block contenido %}
+<em class="text-secondary">Nombre o Apellido</em>
+
+<form class="form-inline my-2 my-lg-0" action="." method="post">
+    {% csrf_token %}
+<input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search" name="pista">
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
 </form>
 
@@ -16,18 +19,18 @@
         <tr>
             <th scope="col">Cédula</th>
             <th scope="col">Nombre</th>
-            <th scope="col">Situación</th>
+            <th scope="col">Registrar</th>
         </tr>
     </thead>
     <tbody>
         {% if funcionarios %}
         {% for funcionario in funcionarios %}
         <tr>
-            <th scope="row">{{ soli.id }}</th>
-            <td>{{ funcionario.situacion }}</td>
+            <th scope="row">{{ funcionario.id}}</th>
+            <td>{{ funcionario.nombre_completo}}</td>
             <td>
-                <a href="" class="btn btn-primary btn-sm">Comisión</a>
-                <a href="" class="btn btn-info btn-sm">Sabático</a>
+                <a href="{% url 'situacionesadms:formato_interno' 'comision-de-estudio-mayor-6-meses' %}" class="btn btn-primary btn-sm">Comisión</a>
+                <a href="{% url 'situacionesadms:formato_interno' 'ano-sabatico' %}" class="btn btn-info btn-sm">Sabático</a>
             </td>
     
         </tr>
