--- a/templates/situacionesadms/formato.html
+++ b/templates/situacionesadms/formato.html
@@ -2,14 +2,18 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block nombre_pantalla %}
+<h3 class="">
+    <a class="text-decoration-none" href="{% url 'situacionesadms:selecciona' %}">
+        <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
+    Solicitud
+</h3>
+{% endblock %}
+
 {% block contenido %}
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <div class="row">
-            <h3 class="col-12">
-                <a class="text-decoration-none" href="{% url 'situacionesadms:selecciona' %}">
-                    <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
-                Solicitud</h3>
             <div class="col-8">
                 <spam tabindex="0" role="button" data-toggle="popover" data-trigger="focus" data-placement="bottom"
                     data-content="{{nota_situacion}}">
