tarde de 25 de nov

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
     opacity: 1;
 }
 body {
-    background-color: white;/*rgb(230, 230, 230);*/
+    background-color: rgb(233, 233, 233);/*rgb(230, 230, 230);*/
     color: #10151C;
     /* background: url("../img/udc.jpg") cover no-repeat !important;  */
 }
