--- a/templates/situacionesadms/formato_interno.html
+++ b/templates/situacionesadms/formato_interno.html
@@ -12,24 +12,25 @@
 <div class="row justify-content-center">
     <div class="col-lg-8">
         <strong class="center">Funcionario: {{ funcionario.nombre_completo }}</strong>
-        <form action="." method="post" enctype="multipart/form-data">
+        <form action="{% url 'situacionesadms:formato_interno' slug funcionario.id %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <div class="form-group">
                 {% include 'situacionesadms/basicform.html' %}
-                {% for field in form %}
-                {% if field.id_for_label in "id_fecha_i id_fecha_f" %}
-                <!--includes arriba y abajo-->
-                {% else %}
-                <div class="form-group">
-                    {{ field.errors }}
-                    {{ field.label_tag }} {{ field }}
-                    {% if field.help_text %}
-                    <p class="help">{{ field.help_text|safe }}</p>
-                    {% endif %}
-                </div>
+            </div>
+            {% for field in form %}
+            {% if field.id_for_label in "id_fecha_i id_fecha_f" %}
+            <!--includes arriba y abajo-->
+            {% else %}
+            <div class="form-group">
+                {{ field.errors }}
+                {{ field.label_tag }} {{ field }}
+                {% if field.help_text %}
+                <p class="help">{{ field.help_text|safe }}</p>
                 {% endif %}
-                {% endfor %}
-            </fieldset>
+            </div>
+            {% endif %}
+            {% endfor %}
+            <br>
             <div class="form-group">
                 <button class="btn btn-dark btn-block" type="submit">Guardar</button>
             </div>
