--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -2,7 +2,14 @@
 {% load static %}
 
 {% block nombre_pantalla %}
-<h3 class="d-sm-none d-md-block">Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
+<div class="row">
+    <div class="col-12">
+        <h3 class=""><a class="text-decoration-none" href="{% url 'situacionesadms:selecciona_interno' %}">
+                <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
+                Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block contenido %}
@@ -10,15 +17,15 @@
 
 <form class="form-inline my-2 my-lg-0" action="." method="post">
     {% csrf_token %}
-<input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search" name="pista">
-<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    <input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search" name="pista" autocomplete="off">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
 </form>
 
 <table class="table table-hover table-striped">
     <thead>
         <tr>
             <th scope="col">Cédula</th>
-            <th scope="col">Nombre</th>
+            <th scope="col">Nombre Completo</th>
             <th scope="col">Registrar</th>
         </tr>
     </thead>
@@ -29,10 +36,12 @@
             <th scope="row">{{ funcionario.id}}</th>
             <td>{{ funcionario.nombre_completo}}</td>
             <td>
-                <a href="{% url 'situacionesadms:formato_interno' 'comision-de-estudio-mayor-6-meses' funcionario.id %}" class="btn btn-primary btn-sm">Comisión</a>
-                <a href="{% url 'situacionesadms:formato_interno' 'ano-sabatico' funcionario.id %}" class="btn btn-info btn-sm">Sabático</a>
+                <a href="{% url 'situacionesadms:formato_interno' 'comision-de-estudio-mayor-6-meses' funcionario.id %}"
+                    class="btn btn-primary btn-sm">Comisión</a>
+                <a href="{% url 'situacionesadms:formato_interno' 'ano-sabatico' funcionario.id %}"
+                    class="btn btn-info btn-sm">Sabático</a>
             </td>
-    
+
         </tr>
         {% endfor %}
         {% else %}
