--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -2,51 +2,64 @@
 {% load static %}
 
 {% block nombre_pantalla %}
-<div class="row">
-    <div class="col-12">
-        <h3 class=""><a class="text-decoration-none" href="{% url 'situacionesadms:selecciona_interno' %}">
-                <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
-                Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"</h3>
-    </div>
-</div>
-
+<h3><a class="text-decoration-none" href="{% url 'situacionesadms:selecciona_interno' %}">
+        <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
+    Sección "Comisión de Estudio Mayor a 6 Meses" y "Año Sabático"
+</h3>
 {% endblock %}
 
 {% block contenido %}
-<em class="text-secondary">Nombre o Apellido</em>
+<br>
+<div class="row justify-content-center">
+    <div class="col-lg-12">
+        <div class="row">
+            <div class="col-6">
 
-<form class="form-inline my-2 my-lg-0" action="." method="post">
-    {% csrf_token %}
-    <input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search" name="pista" autocomplete="off">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-</form>
+                <form class="form-inline my-2 my-lg-0" action="." method="post">
+                    {% csrf_token %}
+                    <input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search"
+                        name="pista" autocomplete="off" autofocus title="Digite Nombre o Apellido">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                </form>
+            </div>
+            <div class="col-6">
+                <a href="{% url 'situacionesadms:listado_interno' %}" class="btn btn-warning float-right">Listado
+                    Situaciones</a>
+            </div>
+        </div>
 
-<table class="table table-hover table-striped">
-    <thead>
-        <tr>
-            <th scope="col">Cédula</th>
-            <th scope="col">Nombre Completo</th>
-            <th scope="col">Registrar</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% if funcionarios %}
-        {% for funcionario in funcionarios %}
-        <tr>
-            <th scope="row">{{ funcionario.id}}</th>
-            <td>{{ funcionario.nombre_completo}}</td>
-            <td>
-                <a href="{% url 'situacionesadms:formato_interno' 'comision-de-estudio-mayor-6-meses' funcionario.id %}"
-                    class="btn btn-primary btn-sm">Comisión</a>
-                <a href="{% url 'situacionesadms:formato_interno' 'ano-sabatico' funcionario.id %}"
-                    class="btn btn-info btn-sm">Sabático</a>
-            </td>
+        <div class="table-responsive">
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Cédula</th>
+                        <th scope="col">Nombre Completo</th>
+                        <th scope="col">Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if funcionarios %}
+                    {% for funcionario in funcionarios %}
+                    <tr>
+                        <th scope="row">{{ funcionario.id}}</th>
+                        <td>{{ funcionario.nombre_completo}}</td>
+                        <td>
+                            <a href="{% url 'situacionesadms:formato_interno' 'comision-de-estudio-mayor-6-meses' funcionario.id %}"
+                                class="btn btn-primary btn-sm" title="Resgistrar Comisión Mayor 6">Comisión</a>
+                            <a href="{% url 'situacionesadms:formato_interno' 'ano-sabatico' funcionario.id %}"
+                                class="btn btn-info btn-sm" title="Resgistrar Año Sabático">Sabático</a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    {% else %}
+                    <tr>
+                        <td colspan="3"><em>Nada para monstrar...</em></td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-        </tr>
-        {% endfor %}
-        {% else %}
-        <em></em>
-        {% endif %}
-    </tbody>
-</table>
 {% endblock %}
