--- a/templates/situacionesadms/solicitudes_entrantes.html
+++ b/templates/situacionesadms/solicitudes_entrantes.html
@@ -8,43 +8,45 @@
 </h3>
 <div class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">No.</th> <!-- col 1 -->
-                    <th scope="col">SITUACION ADMINISTRATIVA</th> <!-- col 2 -->
-                    <th scope="col">ESTADO</th> <!-- col 3 -->
-                    <th scope="col">FUNCIONARIO</th> <!-- col 4 -->
-                    <th scope="col">FECHA</th> <!-- col 5 -->
-                </tr>
-            </thead>
-            <tbody>
-                {%if solicitudes %}
-                {% for soli in solicitudes %}
-                <tr>
-                    <th scope="row">{{ soli.id }}</th> <!-- col 1 -->
-                    <td><a href="{% url 'situacionesadms:revision_solicitud' soli.pk %}" class="text-secondary">
-                            {{ soli.situacion }}
-                        </a>
-                    </td> <!-- col 2 -->
-                    <td>{% for item in estados %}
-                        {% if item.0 == soli.estado %}
-                        {{ item.1}}
-                        {% endif %}
-                        {% endfor %}
-                    </td> <!-- col 3 -->
-                    <td>{{ soli.empleado.nombre_completo }}</td> <!-- col 4 -->
-                    <td>{{ soli.fecha_creacion|date:"SHORT_DATE_FORMAT" }}</td> <!-- col 5 -->
-                </tr>
-                {% endfor %}
-                {% else %}
-                <em>no hay solicitudes</em>
-                {% endif %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table tabla-sm table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">No.</th> <!-- col 1 -->
+                        <th scope="col">SITUACION ADMINISTRATIVA</th> <!-- col 2 -->
+                        <th scope="col">ESTADO</th> <!-- col 3 -->
+                        <th scope="col">FUNCIONARIO</th> <!-- col 4 -->
+                        <th scope="col">FECHA</th> <!-- col 5 -->
+                    </tr>
+                </thead>
+                <tbody>
+                    {%if solicitudes %}
+                    {% for soli in solicitudes %}
+                    <tr>
+                        <th scope="row">{{ soli.id }}</th> <!-- col 1 -->
+                        <td><a href="{% url 'situacionesadms:revision_solicitud' soli.pk %}" class="text-secondary">
+                                {{ soli.situacion }}
+                            </a>
+                        </td> <!-- col 2 -->
+                        <td>{% for item in estados %}
+                            {% if item.0 == soli.estado %}
+                            {{ item.1}}
+                            {% endif %}
+                            {% endfor %}
+                        </td> <!-- col 3 -->
+                        <td>{{ soli.empleado.nombre_completo }}</td> <!-- col 4 -->
+                        <td>{{ soli.fecha_creacion|date:"SHORT_DATE_FORMAT" }}</td> <!-- col 5 -->
+                    </tr>
+                    {% endfor %}
+                    {% else %}
+                    <em class="text-secondary">Nada para mostrar...</em>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
         <br>
-        <small class="text-muted">páginas</small>
-        <hr class="my-1">
+        <small><em class="text-secondary">páginas</em></small>
+        <br class="my-1">
         <div class="">
 
             {% if solicitudes.has_previous %}
