--- a/templates/estadisticas/estadisticas.html
+++ b/templates/estadisticas/estadisticas.html
@@ -2,6 +2,35 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block nombre_pantalla %}
+<h3><a class="text-decoration-none" href="{% url 'users:inicio' %}">
+        <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
+    Estadísticas</h3>
+{% endblock %}
+
 {% block contenido %}
-<h3>Estadisticas</h3>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Número de Situaciones Administrativas por tipo</h5>
+                <ul class="list-group list-group-flush">
+                    {% for situacion, valor in total_tipo.items %}
+                    <li class="list-group-item">{{situacion}}: {{valor}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Total Situaciones</h5>
+                <h4 class="card-text">{{total}}</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
