--- a/templates/situacionesadms/mis_solicitudes.html
+++ b/templates/situacionesadms/mis_solicitudes.html
@@ -33,9 +33,13 @@
                 {% endif %}
                 {% endfor %}</td>
             <td>{{ soli.fecha_creacion|date:"SHORT_DATE_FORMAT" }}</td>
-            <td><a href="#" class="btn btn-warning btn-sm">Modificación</a>
+            <td>
+                {% if soli.situacion.nombre in 'año sabático,comisión de estudio mayor 6 meses' %}
+                {% else %}
+                <a href="{% url 'situacionesadms:modifica_corrige_a' 'modifica' soli.id %}" class="btn btn-warning btn-sm">Modificación</a>
                 <a href="#" class="btn btn-warning btn-sm">Corrección</a>
                 <a href="#" class="btn btn-primary btn-sm">Reintegro</a></td>
+                {% endif %}
         </tr>
         {% endfor %}
         {% else %}
