metodo editando interno

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,9 @@
 /* .btn-outline-warning {
     
 } */
+.bg-pagina{
+    background-color: lightslategray;
+}
 .bgclaro{
     background-color: #fff;
     opacity: 1;
