--- a/templates/users/perfil.html
+++ b/templates/users/perfil.html
@@ -18,7 +18,7 @@
 
                 </div>
                 <div class="card-text">
-                    Cedula: {{ user.username }} <br>
+                    Cédula: {{ user.username }} <br>
                     Nombre: {{ user.first_name }} <br>
                     Apellido: {{ user.last_name }} <br>
                     Cargo: {{ user.empleado.cargo }} <br>
