--- a/templates/situacionesadms/modifica_corrige_a.html
+++ b/templates/situacionesadms/modifica_corrige_a.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block nombre_pantalla %}
-<h3>{{accion}} a solicitud No. {{solicitud_actual}}</h3>
+<h3>{{accion}} a solicitud No. {{id_solicitud_actual}}</h3>
 {% endblock %}
 
 {% block contenido %}
