--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -27,7 +27,7 @@
                     Situaciones</a>
             </div>
         </div>
-
+        <br>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
@@ -53,7 +53,7 @@
                     {% endfor %}
                     {% else %}
                     <tr>
-                        <td colspan="3"><em>Nada para monstrar...</em></td>
+                        <td colspan="3"><em>Nada para mostrar...</em></td>
                     </tr>
                     {% endif %}
                 </tbody>
