--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,8 +7,15 @@
         <h3>Sistema de Gestión de Situaciones Administrativas</h3>
     </div> -->
     <div class="col-md-4 text-center  mt-5">
-        <!-- <a href="{% url 'users:entrar' %}" class="btn btn-dark btn-lg">Ingresar</a> -->
-        <img class="img-fluid" src="{% static 'img/universidad-de-cartagena.png' %}" alt="Logo Universidad de Cartagena">
+
+        <div class="card" style="background-color: white;">
+            <div class="card-body">
+                <!-- <a href="{% url 'users:entrar' %}" class="btn btn-dark btn-lg">Ingresar</a> -->
+                <img class="img-fluid" src="{% static 'img/universidad-de-cartagena.png' %}"
+                    alt="Logo Universidad de Cartagena">
+            </div>
+        </div>
+
     </div>
 </div>
 {% endblock %}
