--- a/templates/situacionesadms/selecciona_interno.html
+++ b/templates/situacionesadms/selecciona_interno.html
@@ -12,14 +12,14 @@
 <br>
 <div class="row justify-content-center">
     <div class="col-lg-12">
-        <div class="row">
+        <div class="row my-1">
             <div class="col-6">
 
-                <form class="form-inline my-2 my-lg-0" action="." method="post">
+                <form class="form-inline" action="." method="post">
                     {% csrf_token %}
-                    <input class="form-control mr-sm-2" type="text" placeholder="Buscar Funcionario" aria-label="Search"
+                    <input class="form-control mr-2" type="text" placeholder="Buscar Funcionario" aria-label="Search"
                         name="pista" autocomplete="off" autofocus title="Digite Nombre o Apellido">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
             </div>
             <div class="col-6">
@@ -27,7 +27,6 @@
                     Situaciones</a>
             </div>
         </div>
-        <br>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
