--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,7 +22,7 @@
       {% if user.is_authenticated %}
       <a class="nav-item nav-link" href="{% url 'users:inicio' %}">Inicio</a>
       {% if user.first_name %}
-      <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido <em>{{ user.first_name }}
+      <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenid@ <em>{{ user.first_name }}
           {{ user.last_name }}</em> <span class="text-light ml-2">|</span></a>
       {% else %}
       <a class="nav-item nav-link institucional" href="{% url 'users:perfil' %}">Bienvenido Usuario |</a>
