--- a/templates/situacionesadms/llenar_reintegro.html
+++ b/templates/situacionesadms/llenar_reintegro.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block nombre_pantalla %}
-<h3><a class="text-decoration-none" href="{% url 'situacionesadms:mis_solicitudes' %}">
+<h3><a class="text-decoration-none" href="{% url 'situacionesadms:mis_solicitudes' %}" title="volver a mis solicitudes">
         <i class="text-info h3 fas fa-angle-left ml-1"></i></a>
     Tramitar Reintegro</h3>
 {% endblock %}
@@ -10,17 +10,23 @@
 {% block contenido %}
 <div class="row justify-content-center">
     <div class="col-12">
-        <h4>Solicitud de reintegro para la situacion administrativa No. {{situacion_objetivo.pk}} ({{situacion_objetivo.nombre_situacion}})</h4>
+        <h4>Solicitud de reintegro para la situacion administrativa No. {{situacion_objetivo.pk}}
+            ({{situacion_objetivo.nombre_situacion}})</h4>
     </div>
     <div class="col-lg-8">
-        <em class="text-secondary">Para la aprobación de su reintegro 
-                debe anexar un archivo con el formato de cumplido y un oficio firmado por su jefe inmediato.</em>
-                <br>
+        <div class="card">
+            <div class="card-body"><em class="text-secondary">
+                Para la aprobación de su reintegro debe anexar un archivo 
+                con la foto/escaner del formato de cumplido y un oficio firmado por su Jefe inmediato.<hr>
+                Si aun no tiene el formato de cumplido la solicitud queda en estado de pendiente y debera enviar un correo en donde se compromete a enviar el Formato de Cumplido.
+                </em>
+            </div>
+        </div>
 
-        <form action="" method="post" enctype="multipart/form-data">
+        <form action="." method="post" enctype="multipart/form-data">
             <div class="form-group mt-1">
-            {% csrf_token %}
-            {{form.as_p}}
+                {% csrf_token %}
+                {{form.as_p}}
             </div>
             <br>
             <div class="form-group">
