--- a/templates/situacionesadms/mis_solicitudes.html
+++ b/templates/situacionesadms/mis_solicitudes.html
@@ -45,7 +45,9 @@
                         <a href="{% url 'situacionesadms:modifica_corrige_a' 'modifica' soli.id %}"
                             class="btn btn-warning btn-sm">Corrección</a>
                         {% endif %}
+                        {% if not soli.reintegro_tramite %}
                         <a href="{% url 'situacionesadms:llenar_reintegro' soli.id %}" class="btn btn-primary btn-sm">Reintegro</a>
+                        {% endif %}
                         {% endif %}
                         {% endif %}
                     </td>
